--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>Vibologist هو شات بتحكي معه وبسألك اسئلة وبحلل شخصيتك بناء على هاد الأساس</p>
       <p>اضغط هنا على الأيقونة لتذهب للموقع : </p>
       <a href="https://www.yeschat.ai/gpts-2OToJMFoae-Vibologist" target="_blank">
-        <img src="images /vibologist-icon.png" alt="Vibologist" width="80">
+        <img src="vibologist-icon.png" alt="Vibologist" width="80">
       </a>
       </section>
   </main>
