--- a/q1.html
+++ b/q1.html
@@ -20,13 +20,13 @@
       <h2>أي من هذه الصور تجذبك أكثر؟</h2>
       <div class="image-grid">
         <a href="result1.html">
-          <img src="images /nature.jpg" alt="صورة طبيعة">
+          <img src="nature.jpg" alt="صورة طبيعة">
         </a>
         <a href="result2.html">
-          <img src="images /city.jpg" alt="صورة مدينة">
+          <img src="city.jpg" alt="صورة مدينة">
         </a>
         <a href="result3.html">
-          <img src="images /adventure.jpg" alt="صورة مغامرة">
+          <img src="adventure.jpg" alt="صورة مغامرة">
         </a>
       </div>
     </section>
