--- a/result1.html
+++ b/result1.html
@@ -18,7 +18,7 @@
   <main>
     <section class="container">
       <h2>🌿 أنت الشخص الحالم</h2>
-      <img src="images /nature.jpg" alt="صورة طبيعة" class="result-image">
+      <img src="nature.jpg" alt="صورة طبيعة" class="result-image">
       <p>تميل إلى التأمل والهدوء، وتجد راحتك في الأماكن الطبيعية والهادئة. تحب الانعزال أحيانًا للتفكير والتخيل.</p>
       <a href="index.html" class="btn">العودة إلى البداية</a>
     </section>
