--- a/result2.html
+++ b/result2.html
@@ -18,7 +18,7 @@
   <main>
     <section class="container">
       <h2>🏙️ أنت الشخص العملي</h2>
-      <img src="images /city.jpg" alt="صورة مدينة" class="result-image">
+      <img src="city.jpg" alt="صورة مدينة" class="result-image">
       <p>تحب الحياة الحضرية وتزدهر في البيئات الديناميكية. تسعى دائمًا لتحقيق أهدافك وتقدّر النظام والتخطيط.</p>
       <a href="index.html" class="btn">العودة إلى البداية</a>
     </section>
