--- a/result3.html
+++ b/result3.html
@@ -18,7 +18,7 @@
   <main>
     <section class="container">
       <h2>🏞️ أنت الشخص المغامر</h2>
-      <img src="images /adventure.jpg" alt="صورة مغامرة" class="result-image">
+      <img src="adventure.jpg" alt="صورة مغامرة" class="result-image">
       <p>تسعى دائمًا إلى البحث عن تحديات جديدة وتجربة مغامرات غير تقليدية. أنت تحب الاكتشاف والسفر إلى أماكن جديدة.</p>
       <a href="index.html" class="btn">العودة إلى البداية</a>
     </section>
